--- a/work/jobs/test0/builds/2015-08-04_12-56-25/build.xml
+++ b/work/jobs/test0/builds/2015-08-04_12-56-25/build.xml
@@ -21,7 +21,7 @@
               </branches>
             </marked>
             <revision reference="../marked"/>
-            <hudsonBuildNumber>129</hudsonBuildNumber>
+            <hudsonBuildNumber>138</hudsonBuildNumber>
           </hudson.plugins.git.util.Build>
         </entry>
       </buildsByBranchName>
@@ -48,7 +48,7 @@
 {&quot;steps&quot;:[&quot;S0&quot;,&quot;S0_a_observer&quot;,&quot;d58e4_a_observer&quot;,&quot;d58e5_a_observer&quot;,&quot;SA&quot;]}
 {&quot;steps&quot;:[&quot;S0&quot;,&quot;S0_a_observer&quot;,&quot;d58e4_a_observer&quot;,&quot;d58e5_a_observer&quot;,&quot;SA&quot;]}
 {&quot;steps&quot;:[&quot;S0&quot;,&quot;S0_a_admin&quot;,&quot;d58e4_a_admin&quot;,&quot;fail&quot;]}</steps>
-      <template>digraph Checker
+      <template>digraph Checker 
 { 
 rankdir=LR; 
 fontname=&quot;Helvetica&quot;; 
@@ -98,20 +98,22 @@ d58e12_a_admin[label=&quot;d58e12_a_admin&quot;]
 </template>
       <build class="build" reference="../../.."/>
       <report>
-        <timestamp>1438632467135</timestamp>
+        <timestamp>1438718185770</timestamp>
         <build class="build" reference="../../../.."/>
-        <totalCalls>7</totalCalls>
-        <failures>2</failures>
-        <passes>5</passes>
-        <percentHappy>71.42857142857143</percentHappy>
-        <percentUnhappy>28.57142857142857</percentUnhappy>
+        <statistics>
+          <totalCalls>7</totalCalls>
+          <failures>2</failures>
+          <passes>5</passes>
+          <percentHappy>71.42857142857143</percentHappy>
+          <percentUnhappy>28.57142857142857</percentUnhappy>
+        </statistics>
       </report>
     </org.jenkinsci.plugins.ultimatecoverage.APICoverageBuildAction>
   </actions>
-  <number>129</number>
-  <startTime>1438632467138</startTime>
+  <number>138</number>
+  <startTime>1438718185773</startTime>
   <result>SUCCESS</result>
-  <duration>2062</duration>
+  <duration>1603</duration>
   <charset>UTF-8</charset>
   <keepLog>false</keepLog>
   <builtOn></builtOn>
