--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>2.4.4</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.codehaus.groovy</groupId>-->
+            <!--<artifactId>groovy-all</artifactId>-->
+            <!--<version>2.4.4</version>-->
+        <!--</dependency>-->
         <!--<dependency>-->
             <!--<groupId>org.spockframework</groupId>-->
             <!--<artifactId>spock-core</artifactId>-->
